@@ -20,6 +20,9 @@ module RecordFilter
           when DSL::Join
             join = result.add_join_on_association(step.association)
             result.add_conjunction(create_from(step.conjunction, join.right_table))
+          when DSL::TableJoin
+            join = result.add_join_on_table(step.table_name, step.table_alias, step.columns)
+            result.add_conjunction(create_from(step.conjunction, join.right_table))
           when DSL::Limit
             result.add_limit_and_offset(step.limit, step.offset)
           when DSL::Order
@@ -61,6 +64,10 @@ module RecordFilter
         table.join_association(association_name)
       end
       
+      def add_join_on_table(table_name, table_alias, columns)
+        @table.join_table(table_name, table_alias, columns)
+      end
+
       def add_order(column_name, direction)
         @table.order_column(column_name, direction)
       end
