@@ -31,8 +31,15 @@ module RecordFilter
       def add_join(association, &block)
         dsl = ConjunctionDSL.new
         dsl.instance_eval(&block) if block
-        @steps << (join = Join.new(association, dsl.conjunction))
-        join
+        @steps << Join.new(association, dsl.conjunction)
+        dsl
+      end
+
+      def add_table_join(table_name, table_alias, columns, &block)
+        dsl = ConjunctionDSL.new
+        dsl.instance_eval(&block) if block
+        @steps << TableJoin.new(table_name, table_alias, columns, dsl.conjunction)
+        dsl
       end
 
       def add_limit(limit, offset)
