@@ -1,0 +1,5 @@
+class Feature < ActiveRecord::Base
+  extend TestModel
+
+  belongs_to :featurable, :polymorphic => true
+end
