@@ -5,4 +5,6 @@ class Post < ActiveRecord::Base
   has_many :comments
   has_one :photo
   has_and_belongs_to_many :tags
+  has_many :features, :as => :featurable
+  has_many :reviews, :as => :reviewable
 end
