@@ -1,0 +1,5 @@
+class Review < ActiveRecord::Base
+  extend TestModel
+
+  belongs_to :reviewable, :polymorphic => true
+end
